base/src/test/resources/failure/patterns/issues-archived/issue281.aya.txt
In file $FILE:5:4 ->

  3 |  | suc Nat
  4 | 
  5 | def add {a b : Nat} : Nat
          ^-^

Error: Unhandled case: {zero}, {suc _}
What are you doing?
